# fastapi-starterkit

./: .dockerignore  .editorconfig  .env.example  Caddyfile  Dockerfile  Dockerfile.caddy  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docker/: Caddy.dockerfile
source/: main.py
source/api/errors/: error_models.py  error_response.py  exception_handlers.py  exception_types.py
source/api/routers/: default_router.py
source/helpers/: datetime.py  dotenv.py  logger.py  poetry.py
source/helpers/decorators/: cache.py  profilers.py  singleton.py
tests/: test_cache.py  test_datetime.py  test_singleton.py
tools/: prepare.py
