[tool.poetry]
name = "source"
version = "0.0.3"
authors = ["Maurício Braz Gonçalves <https://github.com/mauriciobraz>"]
description = "A scalable template with opinionated practices and configurations for FastAPI projects."

[tool.poetry.scripts]
start = "source.main:start"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.poetry.dependencies]
python = "3.10.11"
flake8 = "^6.1.0"
mypy = "^1.6.1"
black = "^23.10.1"
pytest = "^7.4.3"
python-dateutil = "^2.8.2"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
fastapi = "^0.104.1"
sentry-sdk = { extras = ["loguru"], version = "^1.33.1" }
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.8.19.14"
types-toml = "^0.10.8.7"
types-setuptools = "^68.2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
